--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "element-ui": "^2.11.0",
+    "exceljs": "^4.2.0",
     "jwt-decode": "^3.0.0",
     "mavon-editor": "^2.6.17",
     "moment": "^2.29.0",
